src/test/ui/issues/issue-15919.stderr
error: the type `[usize; N]` is too big for the current architecture
  --> $DIR/issue-15919.rs:15:9
   |
LL |     let x = [0usize; 0xffff_ffff_ffff_ffff];
   |         ^

error: aborting due to previous error

